program/rust/bindings2.rs

#[test]
fn bindgen_test_layout_pc_price_info() {
    assert_eq!(
        ::std::mem::size_of::<pc_price_info>(),
        32usize,
        concat!("Size of: ", stringify!(pc_price_info))
    );
    assert_eq!(
        ::std::mem::align_of::<pc_price_info>(),
        8usize,
        concat!("Alignment of ", stringify!(pc_price_info))
    );
    fn test_field_price_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_price_info>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).price_) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_price_info),
                "::",
                stringify!(price_)
            )
        );
    }
    test_field_price_();
    fn test_field_conf_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_price_info>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).conf_) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_price_info),
                "::",
                stringify!(conf_)
            )
        );
    }
    test_field_conf_();
    fn test_field_status_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_price_info>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).status_) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_price_info),
                "::",
                stringify!(status_)
            )
        );
    }
    test_field_status_();
    fn test_field_corp_act_status_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_price_info>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).corp_act_status_) as usize - ptr as usize
            },
            20usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_price_info),
                "::",
                stringify!(corp_act_status_)
            )
        );
    }
    test_field_corp_act_status_();
    fn test_field_pub_slot_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_price_info>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).pub_slot_) as usize - ptr as usize
            },
            24usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_price_info),
                "::",
                stringify!(pub_slot_)
            )
        );
    }
    test_field_pub_slot_();
}
pub type pc_price_info_t = pc_price_info;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct pc_price_comp {
    pub pub_: pc_pub_key_t,
    pub agg_: pc_price_info_t,
    pub latest_: pc_price_info_t,
}
#[test]
fn bindgen_test_layout_pc_price_comp() {
    assert_eq!(
        ::std::mem::size_of::<pc_price_comp>(),
        96usize,
        concat!("Size of: ", stringify!(pc_price_comp))
    );
    assert_eq!(
        ::std::mem::align_of::<pc_price_comp>(),
        8usize,
        concat!("Alignment of ", stringify!(pc_price_comp))
    );
    fn test_field_pub_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_price_comp>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).pub_) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_price_comp),
                "::",
                stringify!(pub_)
            )
        );
    }
    test_field_pub_();
    fn test_field_agg_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_price_comp>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).agg_) as usize - ptr as usize
            },
            32usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_price_comp),
                "::",
                stringify!(agg_)
            )
        );
    }
    test_field_agg_();
    fn test_field_latest_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_price_comp>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).latest_) as usize - ptr as usize
            },
            64usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_price_comp),
                "::",
                stringify!(latest_)
            )
        );
    }
    test_field_latest_();
}
pub type pc_price_comp_t = pc_price_comp;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pc_ema {
    pub val_: i64,
    pub numer_: i64,
    pub denom_: i64,
}
#[test]
fn bindgen_test_layout_pc_ema() {
    assert_eq!(
        ::std::mem::size_of::<pc_ema>(),
        24usize,
        concat!("Size of: ", stringify!(pc_ema))
    );
    assert_eq!(
        ::std::mem::align_of::<pc_ema>(),
        8usize,
        concat!("Alignment of ", stringify!(pc_ema))
    );
    fn test_field_val_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_ema>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).val_) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_ema),
                "::",
                stringify!(val_)
            )
        );
    }
    test_field_val_();
    fn test_field_numer_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_ema>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).numer_) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_ema),
                "::",
                stringify!(numer_)
            )
        );
    }
    test_field_numer_();
    fn test_field_denom_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_ema>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).denom_) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_ema),
                "::",
                stringify!(denom_)
            )
        );
    }
    test_field_denom_();
}
pub type pc_ema_t = pc_ema;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct pc_price {
    pub magic_: u32,
    pub ver_: u32,
    pub type_: u32,
    pub size_: u32,
    pub ptype_: u32,
    pub expo_: i32,
    pub num_: u32,
    pub num_qt_: u32,
    pub last_slot_: u64,
    pub valid_slot_: u64,
    pub twap_: pc_ema_t,
    pub twac_: pc_ema_t,
    pub timestamp_: i64,
    pub min_pub_: u8,
    pub drv2_: i8,
    pub drv3_: i16,
    pub drv4_: i32,
    pub prod_: pc_pub_key_t,
    pub next_: pc_pub_key_t,
    pub prev_slot_: u64,
    pub prev_price_: i64,
    pub prev_conf_: u64,
    pub prev_timestamp_: i64,
    pub agg_: pc_price_info_t,
    pub comp_: [pc_price_comp_t; 32usize],
}
